# halyn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  halyn.example.yml  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: driver_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: hello_halyn.py
extension/: background.js  content_script.js  manifest.json  rules.json
extension/policy/: DEPLOY.md
extension/policy/linux/: halyn.json
extension/policy/macos/: com.google.Chrome.plist
extension/verify/: index.html
src/halyn/: __init__.py  __main__.py  audit.py  auth.py  autonomy.py  cli.py  config.py  consent.py  control_plane.py  dashboard.py  discovery.py  engine.py  intent.py  llm.py  mcp.py  mcp_serve.py  nrp_bridge.py  redteam.py  sanitizer.py  server.py  shield.py  types.py  watchdog.py
src/halyn/_nrp/: __init__.py
src/halyn/drivers/: __init__.py  browser.py  dds.py  docker.py  http_auto.py  mqtt.py  opcua.py  ros2.py  serial.py  socket_raw.py  ssh.py  unitree.py  websocket.py
src/halyn/memory/: store.py
src/halyn/security/: __init__.py  audit_guard.py  ebpf_monitor.py  fs_watch.py  process_guard.py  proxy.py
tests/: test_halyn.py
